RESOLVED FIXED158436
Decrease PiP flicker by not removing window prematurely.
https://bugs.webkit.org/show_bug.cgi?id=158436
Summary Decrease PiP flicker by not removing window prematurely.
Jeremy Jones
Reported 2016-06-06 14:16:23 PDT
Decrease PiP flicker by not removing window prematurely.
Attachments
Patch (1.65 KB, patch)
2016-06-06 14:33 PDT, Jeremy Jones
no flags
Patch (1.68 KB, patch)
2016-06-06 14:39 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2016-06-06 14:33:53 PDT
Jeremy Jones
Comment 2 2016-06-06 14:39:04 PDT
Jeremy Jones
Comment 3 2016-06-06 14:39:52 PDT
WebKit Commit Bot
Comment 4 2016-06-13 14:59:13 PDT
Comment on attachment 280634 [details] Patch Clearing flags on attachment: 280634 Committed r202006: <http://trac.webkit.org/changeset/202006>
WebKit Commit Bot
Comment 5 2016-06-13 14:59:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.