Decrease PiP flicker by not removing window prematurely. https://bugs.webkit.org/show_bug.cgi?id=158436 <rdar://problem/19052639>

Patch by Jeremy Jones <jeremyj@apple.com> on 2016-06-13
Reviewed by Darin Adler.

UIWindow shouldn't be removed until cleanupFullscreen, so the video layer has a chance
to be reparented in the DOM first.

* platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
(WebVideoFullscreenInterfaceAVKit::didStopPictureInPicture):

Canonical link: https://commits.webkit.org/176785@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202006 268f45cc-cd09-0410-ab3c-d52691b4dbfc